# platform-output-support

./: .gitignore  Documentazione.txt  Makefile  README.md  config.tfvars  config.yaml  config_development.tfvars  config_platform.tfvars  config_ppp.tfvars  justfile  pyproject.toml
config/: config.yaml  config_ppp.yaml  datasets.yaml
config/clickhouse/: Dockerfile
config/opensearch/: Dockerfile  colocalisation.json  credible_set.json  default.json  facet_search.json  genetics_evidence.json  l2g.json  l2g_predictions.json  search.json  search_known_drugs.json  study.json  variant.json
deploy_bq/: create_bq.sh
deployment/: .terraform.lock.hcl  backend.tf  local_pos_config.yaml  locals.tf  main.tf  outputs.tf  pos_config.tftpl  providers.tf  s3_config.tftpl  startup.sh  terraform.tf  terraform.tfvars  variable.tf  variables.tf
profiles/: config.2409  config.2409dev  config.2409dev-ppp  config.2412uo  config.2503  config.2503dev  config.2503dev-ppp  config.2909-aotf-add-tables  config.3010-development  config.development  config.mbdev  config.mbernal  config.platform  config.platform-2406  config.ppp  config.pppdev  default.tfvars
scripts/BigQuery/: load_data.sh
scripts/CH/: literature.sql  (+5 more)
sync_data_to_prod/: pull_sync_to_ebi_ftp.sh  sync.sh  sync_to_ebi_ftp.sh  syncgs.sh
terraform/: deployment_context.tfvars.example  list_commands.txt  main.tf  outputs.tf  variables.tf
terraform-sync/: main.tf  outputs.tf  sync.sh  variables.tf
terraform_create_images/: README.md  backend.tf  compute-posvm.tf  locals.tf  main.tf  outputs.tf  run.sh  variables.tf
(+227 files in other folders)
