[project]
name = "POS"
version = "0.1.0"
description = "Open Targets Pipeline Output Stage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "opentargets-otter>=25.0.0a11",
    "orjson>=3.10.15",
    "ot-croissant",
    "polars>=1.22.0",
    "pyarrow>=19.0.0",
    "rich>=13.9.4",
    "smart-open>=7.1.0",
    "typer>=0.15.1",
]

[dependency-groups]
dev = ["deptry>=0.23.0", "ruff>=0.9.6"]

[project.optional-dependencies]
test = ["pytest==8.3.4", "coverage==7.6.10", "pytest-mock==3.14.0"]

[project.scripts]
p2j = "pos.parquet2json.cli:app"
pos = "pos.core:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ot-croissant = { git = "https://github.com/opentargets/ot_croissant.git", branch = "master" }

